--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 					<div class="col-md-12">
 						<div class="header-section">
 							<h2>Портфолио</h2>
-							<p>Чтобы посмотреть работу, кликни на любую из картинок слайдера</p>
+							<p>Чтобы посмотреть работу, кликни на картинку из слайдера слайдера</p>
 							<div class="divider"></div>
 						</div>
 					</div>
